# TenSQL

./: .gitattributes  .gitignore  LICENSE  README.md  benchmark_ingest_and_named_edges.sh  benchmark_twohop.sh  build_PyObjectHelper.py  download_benchmark_data.sh  postgresql.conf  pylintrc  run_tests.py  setup.cfg  setup.py  single_ewisemult.sh  single_ingest_and_named_edges.sh  single_twohop.sh
benchmark/: extract_named_edges.py  matrix_add.py  matrix_hprod.py  matrix_multiply.py
src/: HashStore.hpp  PyHashOCNT.pyx  PyObjectHelper.c  PythonObj.hpp
tensql/: Column.py  Database.py  PrimaryKey.py  PyObjectHelper.py  Table.py  Types.py  __init__.py  _version.py  util.py
tensql/LAIR/: AntiMask.py  Cast.py  CastLike.py  DotMxM.py  DotMxV.py  DotVxM.py  ElementwiseAdd.py  ElementwiseApply.py  ElementwiseMultiply.py  InnerBroadcast.py  InnerBroadcastMask.py  InnerBroadcastStencil.py  Mask.py  Node.py  Optimizer.py  Output.py  Pattern.py  PermuteIndices.py  PrimaryKey.py  Promote.py  Reduction.py  Tensor.py  VectorToColumnMatrix.py  VectorToDiagMatrix.py  VectorToRowMatrix.py  Visitor.py  __init__.py
tensql/QIR/: ABCArithmeticExpression.py  ABCBooleanExpression.py  ABCExpression.py  ABCNode.py  ABCTableSequence.py  ABCUnaryExpression.py  ArithmeticBinaryExpression.py  ArithmeticColumn.py  ArithmeticConstant.py  ArithmeticUnaryExpression.py  BinaryExpression.py  BooleanBinaryExpression.py  BooleanColumn.py  BooleanConstant.py  Constant.py  Database.py  From.py  GroupBy.py  InsertQuery.py  Join.py  Joiner.py  LAIRTranslator.py  QirColumn.py  Query.py  ReductionExpression.py  (+4 more)
(+21 files in other folders)
