[metadata]
name = tensql
description = TenSQL
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = sparse linear algebra tensor sql
author = Jon Roose
author_email = jproose@sandia.gov
maintainer = Jon Roose
maintainer_email = jproose@sandia.gov
license = BSD Clause 3
classifiers = 
    Programming Language :: Python :: 3

[options]
python_requires = >=3.9,<3.10
install_requires = 
    pygraphblas
    h5py
    cython
    wheel
    numpy

[options.extras_require]
test =
    coverage
    psutil

benchmark = 
    sqlalchemy
    psycopg2
    pandasql

[versioneer]
VCS = git
versionfile_source = tensql/_version.py
tag_prefix = v
